tests/cases/compiler-development/artifact/errors/diagnostic-private-nested-module.diagnostic
diagnostic error code=M0001 family=module message="module 'Outer::Inner' is not public" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-nested-module.ari" display="tests/cases/modules/errors/private-nested-module.ari" bytes=201
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-nested-module.ari" line=14 column=10 end_line=14 end_column=15 byte_start=176 byte_end=181 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-nested-module.ari:14:10\n    |\n 14 |   return Outer::Inner::value();\n    |          ^^^^^"
